1.0: finalize api, cleanup implementation